# morpheus

./: .dockerignore  .gitignore  Dockerfile  LICENSE  LICENSE_gaussctrl  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_nerfstudio.txt
src/morpheus/: cross_attention.py  ddim_partial_inverter.py  forward_warp_compositor.py  inpainter.py  p_frame_generation.py  pipeline.py  point_cloud.py  video.py  xattn_controlnet.py
src/morpheus/datasets/: ns_render_dataset.py
src/morpheus/diffuser_pipelines/: pipeline_rgbd_controlnet_inpaint.py  schedulers.py
src/morpheus/interactive/: rgbd_model.py
src/morpheus/utils/: data_utils.py  depth_scaling.py  filtering.py  geometry_utils.py  mesh_utils.py  nerfstudio.py  prepare_3dgs.py  preprocess_custom_data.py  remove_background.py
src/morpheus/visualization/: image_viz.py
src/regsplatfacto/: pyproject.toml
src/regsplatfacto/regsplatfacto/: regsplatfacto.py  regsplatfacto_config.py  utils.py
src/regsplatfacto/regsplatfacto/data/: metric3d_dataset.py  metric3d_predictor.py  regsplatfacto_datamanager.py
