[project]
name = "morpheus"
version = "0.0.0"
requires-python = ">=3.9.7"
description = "Morpheus"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
morpheus = "src/morpheus"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true
