[project]
name = "regsplatfacto"
version = "0.0.1"

dependencies=[
    "gsplat==1.0.0",
    "open3d",
    "tqdm",
    "kornia==0.6.7",
    "mmcv==2.2.0",
    "mmengine==0.10.4",
]

[tool.setuptools.packages.find]
include = ["regsplatfacto*"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
warn_unused_configs = true
exclude = ["build"]

[[tool.mypy.overrides]]
module = [
    "gsplat.*",
    "torchvision.*",
    "torchvision.transforms.*",
    "clip",
    "nerfstudio.*",
    "open3d",
    "google.*",
]
ignore_missing_imports = true

[project.entry-points.'nerfstudio.method_configs']
regsplatfacto = 'regsplatfacto.regsplatfacto_config:regsplatfacto_method'

[project.scripts]
ns-render-for-meshing = "regsplatfacto.render_for_meshing:entrypoint"
ns-meshing = "regsplatfacto.meshing:entrypoint"
